2005-03-05 00:59  patthoyts

	* Makefile.vc, jim-win32com.c, jim.c: Added ole32.foreach command,
	  changed creation to ole32.create.  Added support for dealing with
	  returned ole32 obejcts.  Couple of const fixes in jim core.

2005-03-04 23:44  antirez

	* jim.c: Removed two unused parts of code resulting in warnings
	  compiling under 64bit systems.

2005-03-04 23:04  antirez

	* ChangeLog, jim.c: Fix for [info local], at top level an empty
	  list is now returned.

2005-03-04 22:59  antirez

	* jim.c: binary safe parsers for scripts,lists,expr,subst.

2005-03-04 21:12  antirez

	* jim.c: Fixed a bug in Jim_Collect() thanks to Colin McPhail that
	  reported it.

2005-03-04 16:37  antirez

	* jim-posix.c, jim-win32.c, jim-win32com.c, jim.c: JIM_NOTUSED
	  moved after var declarations blocks.

2005-03-04 16:33  antirez

	* jim.c: [info locals/vars/globals]

2005-03-04 15:09  antirez

	* BUGS, ChangeLog, jim.c, jim.h, test.tcl: jim::libpath renamed
	  into jim.libpath. Also there was a bug listed in the BUG file
	  about jim.libpath lookup performed using the local variable API
	  that's now fixed. In order to fix the problem the new API call
	  Jim_GetGlobalVariableStr() was added.  Jim_GetVariableStr() and
	  Jim_GetGlobalVariableStr() are now exported.

2005-03-04 13:32  antirez

	* ChangeLog, jim-posix.c, jim-win32.c, jim-win32com.c, jim.c,
	  jim.h, test.tcl: $id: ..$ strings added

2005-03-04 13:15  antirez

	* ChangeLog, Makefile: Added a 'commit' makefile target to generate
	  ChangeLog + cvs commit.

2005-03-04 13:12  antirez

	* ChangeLog: ChangeLog file added, generated using cvs2cl

2005-03-04 12:54  antirez

	* jim-posix.c, jim-win32.c, jim-win32com.c, jim.c, jim.h: Added
	  JIM_NOTUSED macro. Macro used where appropriate.

2005-03-04 11:47  antirez

	* README, bench.tcl, jim.c, test.tcl: Small README change to
	  reflect LIBS Makefile var.

2005-03-04 11:06  patthoyts

	* Makefile, jim-win32com.c, jim.c, jim.h: Use command line vars in